# medInria-visages

./: CMakeCache.txt  CMakeLists.txt  README  medinria-visages-plugins.kdev4
.kdev4/: medinria-visages-plugins.kdev4
animaDataMCMImage/: CMakeLists.txt  animaDataMCMImagePlugin.cpp  animaDataMCMImagePlugin.h  animaDataMCMImagePlugin.json  animaDataMCMImagePluginExport.h
animaDataMCMImage/datas/: animaDataMCMImageDouble3.cpp  animaDataMCMImageDouble3.h  animaDataMCMImageFloat3.cpp  animaDataMCMImageFloat3.h
animaDataMCMImage/interactors/: animaDataMCMImageVtkViewInteractor.cpp  animaDataMCMImageVtkViewInteractor.h  animaMCMITKToVTKFilter.h  animaMCMITKToVTKFilter.hxx  vtkMCMGlyph.cxx  vtkMCMGlyph.h  vtkMCMManager.cxx  vtkMCMManager.h  vtkMCMSource.cxx  vtkMCMSource.h  vtkMCMVisuManager.cxx  vtkMCMVisuManager.h
animaDataMCMImage/readers/: animaDataMCMImageReader.cpp  animaDataMCMImageReader.h
animaDataMCMImage/writers/: animaDataMCMImageWriter.cpp  animaDataMCMImageWriter.h  animaDataMCMImageWriterBase.cpp  animaDataMCMImageWriterBase.h  animaMetaDataMCMImageWriter.cpp  animaMetaDataMCMImageWriter.h  animaNiftiDataMCMImageWriter.cpp  animaNiftiDataMCMImageWriter.h
animaDenseBMRegistration/: CMakeLists.txt  animaDenseBMRegistration.cpp  animaDenseBMRegistration.h  animaDenseBMRegistrationPlugin.cpp  animaDenseBMRegistrationPlugin.h  animaDenseBMRegistrationPlugin.json  animaDenseBMRegistrationPluginExport.h  animaDenseBMRegistrationToolBox.cpp  animaDenseBMRegistrationToolBox.h  rpiAnimaDenseBMRegistration.h  rpiAnimaDenseBMRegistration.hxx
animaLesionsSegmentation/: CMakeLists.txt  animaLesionsSegmentation.cpp  animaLesionsSegmentation.h  animaLesionsSegmentationPlugin.cpp  animaLesionsSegmentationPlugin.h  animaLesionsSegmentationPluginExport.h  animaLesionsSegmentationToolBox.cpp  animaLesionsSegmentationToolBox.h
animaMCMEstimation/: CMakeLists.txt  animaMCMEstimationPlugin.cpp  animaMCMEstimationPlugin.h  animaMCMEstimationPlugin.json  animaMCMEstimationPlugin.qrc  animaMCMEstimationPluginExport.h  animaMCMEstimationProcess.cpp  animaMCMEstimationProcess.h  animaMCMEstimationProcessPresenter.cpp  animaMCMEstimationProcessPresenter.h
animaNonLocalMeansFilter/: CMakeLists.txt  README.txt  animaNonLocalMeansFilter.cpp  animaNonLocalMeansFilter.h  animaNonLocalMeansFilterExport.h  animaNonLocalMeansFilterPlugin.cpp  animaNonLocalMeansFilterPlugin.h  animaNonLocalMeansFilterPlugin.json  animaNonLocalMeansFilterPlugin.qrc  animaNonLocalMeansFilterPluginExport.h  animaNonLocalMeansFilterProcess.cpp  animaNonLocalMeansFilterProcess.h  animaNonLocalMeansFilterProcessPresenter.cpp  animaNonLocalMeansFilterProcessPresenter.h  animaNonLocalMeansFilterToolBox.cpp  animaNonLocalMeansFilterToolBox.h
animaPyramidalBMRegistration/: CMakeLists.txt  animaPyramidalBMRegistration.cpp  animaPyramidalBMRegistration.h  animaPyramidalBMRegistrationPlugin.cpp  animaPyramidalBMRegistrationPlugin.h  animaPyramidalBMRegistrationPlugin.json  animaPyramidalBMRegistrationPluginExport.h  animaPyramidalBMRegistrationToolBox.cpp  animaPyramidalBMRegistrationToolBox.h  rpiAnimaPyramidalBMRegistration.h  rpiAnimaPyramidalBMRegistration.hxx
animaRelaxometry/: CMakeLists.txt  animaDESPOT1Relaxometry.cpp  animaDESPOT1Relaxometry.h  animaDESPOT1RelaxometryProcess.cpp  animaDESPOT1RelaxometryProcess.h  animaDESPOT1RelaxometryProcessPresenter.cpp  animaDESPOT1RelaxometryProcessPresenter.h  animaDESPOT1RelaxometryToolBox.cpp  animaDESPOT1RelaxometryToolBox.h  animaRelaxometryPlugin.cpp  animaRelaxometryPlugin.h  animaRelaxometryPlugin.json  animaRelaxometryPlugin.qrc  animaRelaxometryPluginExport.h  animaT2Relaxometry.cpp  animaT2Relaxometry.h  animaT2RelaxometryProcess.cpp  animaT2RelaxometryProcess.h  animaT2RelaxometryProcessPresenter.cpp  animaT2RelaxometryProcessPresenter.h  animaT2RelaxometryToolBox.cpp  animaT2RelaxometryToolBox.h
animaSymmetryPlane/: CMakeLists.txt  animaSymmetryPlane.cpp  animaSymmetryPlane.h  animaSymmetryPlanePlugin.cpp  animaSymmetryPlanePlugin.h  animaSymmetryPlanePlugin.json  animaSymmetryPlanePlugin.qrc  animaSymmetryPlanePluginExport.h  animaSymmetryPlaneProcess.cpp  animaSymmetryPlaneProcess.h  animaSymmetryPlaneProcessPresenter.cpp  animaSymmetryPlaneProcessPresenter.h  animaSymmetryPlaneToolBox.cpp  animaSymmetryPlaneToolBox.h
animaTensorEstimation/: CMakeLists.txt  animaTensorEstimationPlugin.cpp  animaTensorEstimationPlugin.h  animaTensorEstimationPlugin.json  animaTensorEstimationPlugin.qrc  animaTensorEstimationPluginExport.h  animaTensorEstimationProcess.cpp  animaTensorEstimationProcess.h  animaTensorEstimationProcessPresenter.cpp  animaTensorEstimationProcessPresenter.h
bvProcessBrainSegmentation/: CMakeLists.txt  bvProcessBrainSegmentation.cpp  bvProcessBrainSegmentation.h  bvProcessBrainSegmentationPlugin.cpp  bvProcessBrainSegmentationPlugin.h  bvProcessBrainSegmentationPluginExport.h
cmake/: FindDCMTK2.cmake  FindMSTools.cmake  FixBoostMacInstall.cmake  FixBoostMacLink.cmake  pack.cmake
doc/: CMakeLists.txt
itkDataImageConverter/: CMakeLists.txt  itkDataImageConverterPlugin.cpp  itkDataImageConverterPlugin.h  itkDataImageConverterPluginExport.h  itkDataImageTov3dDataImageConverter.cpp  itkDataImageTov3dDataImageConverter.h
packageScripts/: fix_apple_links_and_package.sh.in  mac_visages_plugins_release_prepare.sh.in  mac_vistal_package_maker.sh.in
qtdcmDataSource/: CMakeLists.txt  qtdcmDataSource.cpp  qtdcmDataSource.h  qtdcmDataSourceImportToolBox.cpp  qtdcmDataSourcePlugin.cpp  qtdcmDataSourcePlugin.h  qtdcmDataSourceServersSettingsToolBox.cpp  qtdcmDataSourceServersSettingsToolBox.h
qtshanoirDataSource/: CMakeLists.txt  qtshanoirDataSource.cpp  qtshanoirDataSource.h  qtshanoirDataSourceDefinitions.h.in  qtshanoirDataSourcePlugin.cpp  qtshanoirDataSourcePlugin.h  qtshanoirDataSourcePlugin.json  qtshanoirDataSourcePluginExport.h  qtshanoirDataSourceProgressToolBox.cpp  qtshanoirDataSourceProgressToolBox.h  qtshanoirDataSourceToolBox.cpp  qtshanoirDataSourceToolBox.h
v3dView/: v3dView.cpp
v3dViewPublic/: v3dViewPublic.cpp
(+180 files in other folders)
